src/norx/config.nim

##  Orx - Portable Game Engine
##
##  Copyright (c) 2008-2020 Orx-Project
##
##  This software is provided 'as-is', without any express or implied
##  warranty. In no event will the authors be held liable for any damages
##  arising from the use of this software.
##
##  Permission is granted to anyone to use this software for any purpose,
##  including commercial applications, and to alter it and redistribute it
##  freely, subject to the following restrictions:
##
##     1. The origin of this software must not be misrepresented; you must not
##     claim that you wrote the original software. If you use this software
##     in a product, an acknowledgment in the product documentation would be
##     appreciated but is not required.
##
##     2. Altered source versions must be plainly marked as such, and must not be
##     misrepresented as being the original software.
##
##     3. This notice may not be removed or altered from any source
##     distribution.

import incl, vector

## * Defines
##

const
  orxCONFIG_KZ_RESOURCE_GROUP* = "Config"

## * Event enum
##

type
  orxCONFIG_EVENT* {.size: sizeof(cint).} = enum
    orxCONFIG_EVENT_RELOAD_START = 0, ## *< Event sent when reloading config starts
    orxCONFIG_EVENT_RELOAD_STOP, ## *< Event sent when reloading config stops
    orxCONFIG_EVENT_NUMBER, orxCONFIG_EVENT_NONE = orxENUM_NONE


## * Config callback function type to use with save function

type
  orxCONFIG_SAVE_FUNCTION* = proc (zSectionName: cstring; zKeyName: cstring;
                                zFileName: cstring; bUseEncryption: orxBOOL): orxBOOL {.
      cdecl.}

## * Config callback function type to use with clear function

type
  orxCONFIG_CLEAR_FUNCTION* = proc (zSectionName: cstring; zKeyName: cstring): orxBOOL {.
      cdecl.}
  orxCONFIG_BOOTSTRAP_FUNCTION* = proc(): orxSTATUS {.cdecl.}

## * Config module setup
##

proc orxConfig_Setup*() {.cdecl, importc: "orxConfig_Setup", dynlib: libORX.}
## * Initializes the Config Module
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_Init*(): orxSTATUS {.cdecl, importc: "orxConfig_Init",
                                 dynlib: libORX.}
## * Exits from the Config Module
##

proc orxConfig_Exit*() {.cdecl, importc: "orxConfig_Exit", dynlib: libORX.}
## * Sets encryption key
##  @param[in] _zEncryptionKey  Encryption key to use, nil to clear
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetEncryptionKey*(zEncryptionKey: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_SetEncryptionKey", dynlib: libORX.}
## * Gets encryption key
##  @return Current encryption key / orxSTRING_EMPTY
##

proc orxConfig_GetEncryptionKey*(): cstring {.cdecl,
    importc: "orxConfig_GetEncryptionKey", dynlib: libORX.}
## * Sets config bootstrap function: this function will get called when the config menu is initialized, before any config file is loaded.
##   The only available APIs within the bootstrap function are those of orxConfig and its dependencies (orxMemory, orxString, orxFile, orxEvent, orxResource, ...)
##  @param[in] _pfnBootstrap     Bootstrap function that will get called at module init, before loading any config file.
##                                 If this function returns orxSTATUS_FAILURE, the default config file will be skipped, otherwise the regular load sequence will happen
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetBootstrap*(pfnBootstrap: orxCONFIG_BOOTSTRAP_FUNCTION): orxSTATUS {.
    cdecl, importc: "orxConfig_SetBootstrap", dynlib: libORX.}
## * Sets config base name
##  @param[in] _zBaseName        Base name used for default config file
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetBaseName*(zBaseName: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_SetBaseName", dynlib: libORX.}
## * Gets config main file name
##  @return Config main file name / orxSTRING_EMPTY
##

proc orxConfig_GetMainFileName*(): cstring {.cdecl,
    importc: "orxConfig_GetMainFileName", dynlib: libORX.}
## * Loads config file from source
##  @param[in] _zFileName        File name
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_Load*(zFileName: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_Load", dynlib: libORX.}
## * Loads config data from a memory buffer. NB: the buffer will be modified during processing!
##  @param[in] _acBuffer         Buffer to process, will be modified during processing
##  @param[in] _u32BufferSize    Size of the buffer
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_LoadFromMemory*(acBuffer: cstring; u32BufferSize: orxU32): orxSTATUS {.
    cdecl, importc: "orxConfig_LoadFromMemory", dynlib: libORX.}
## * Reloads config files from history
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_ReloadHistory*(): orxSTATUS {.cdecl,
    importc: "orxConfig_ReloadHistory", dynlib: libORX.}
## * Writes config to given file. Will overwrite any existing file, including all comments.
##  @param[in] _zFileName        File name, if null or empty the default file name will be used
##  @param[in] _bUseEncryption   Use file encryption to make it human non-readable?
##  @param[in] _pfnSaveCallback  Callback used to filter sections/keys to save. If null, all sections/keys will be saved
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_Save*(zFileName: cstring; bUseEncryption: orxBOOL;
                    pfnSaveCallback: orxCONFIG_SAVE_FUNCTION): orxSTATUS {.cdecl,
    importc: "orxConfig_Save", dynlib: libORX.}
## * Copies a file with optional encryption
##  @param[in] _zDstFileName     Name of the destination file
##  @param[in] _zSrcFileName     Name of the source file
##  @param[in] _zEncryptionKey   Encryption key to use when writing destination file, nil for no encryption
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_CopyFile*(zDstFileName: cstring; zSrcFileName: cstring;
                        zEncryptionKey: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_CopyFile", dynlib: libORX.}
## * Merges multiple files into a single one, with optional encryption
##  @param[in] _zDstFileName     Name of the destination file
##  @param[in] _azSrcFileName    List of the names of the source files
##  @param[in] _u32Number        Number of source file names
##  @param[in] _zEncryptionKey   Encryption key to use when writing destination file, nil for no encryption
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_MergeFiles*(zDstFileName: cstring;
                          azSrcFileName: cstringArray; u32Number: orxU32;
                          zEncryptionKey: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_MergeFiles", dynlib: libORX.}
## * Selects current working section
##  @param[in] _zSectionName     Section name to select
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SelectSection*(zSectionName: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_SelectSection", dynlib: libORX.}
## * Renames a section
##  @param[in] _zSectionName     Section to rename
##  @param[in] _zNewSectionName  New name for the section
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_RenameSection*(zSectionName: cstring;
                             zNewSectionName: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_RenameSection", dynlib: libORX.}
## * Gets section origin (ie. the file where it was defined for the first time or orxSTRING_EMPTY if not defined via a file)
##  @param[in] _zSectionName     Concerned section name
##  @return orxSTRING if found, orxSTRING_EMPTY otherwise
##

proc orxConfig_GetOrigin*(zSectionName: cstring): cstring {.cdecl,
    importc: "orxConfig_GetOrigin", dynlib: libORX.}
## * Gets section origin ID (ie. the file where it was defined for the first time or orxSTRING_EMPTY if not defined via a file)
##  @param[in] _zSectionName     Concerned section name
##  @return String ID if found, orxSTRINGID_UNDEFINED otherwise
##

proc orxConfig_GetOriginID*(zSectionName: cstring): orxSTRINGID {.cdecl,
    importc: "orxConfig_GetOriginID", dynlib: libORX.}
## * Sets a section's parent
##  @param[in] _zSectionName     Concerned section, if the section doesn't exist, it will be created
##  @param[in] _zParentName      Parent section's name, if the section doesn't exist, it will be created, if nil is provided, the former parent will be erased, if orxSTRING_EMPTY is provided, "no default parent" will be enforced
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetParent*(zSectionName: cstring; zParentName: cstring): orxSTATUS {.
    cdecl, importc: "orxConfig_SetParent", dynlib: libORX.}
## * Gets a section's parent
##  @param[in] _zSectionName     Concerned section
##  @return Section's parent name if set or orxSTRING_EMPTY if no parent has been forced, nil otherwise
##

proc orxConfig_GetParent*(zSectionName: cstring): cstring {.cdecl,
    importc: "orxConfig_GetParent", dynlib: libORX.}
## * Sets default parent for all sections
##  @param[in] _zSectionName     Section name that will be used as an implicit default parent section for all config sections, if nil is provided, default parent will be removed
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetDefaultParent*(zSectionName: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_SetDefaultParent", dynlib: libORX.}
## * Gets current working section
##  @return Current selected section
##

proc orxConfig_GetCurrentSection*(): cstring {.cdecl,
    importc: "orxConfig_GetCurrentSection", dynlib: libORX.}
## * Pushes a section (storing the current one on section stack)
##  @param[in] _zSectionName     Section name to push
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_PushSection*(zSectionName: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_PushSection", dynlib: libORX.}
## * Pops last section from section stack
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_PopSection*(): orxSTATUS {.cdecl, importc: "orxConfig_PopSection",
                                       dynlib: libORX.}
## * Has section for the given section name?
##  @param[in] _zSectionName     Section name
##  @return orxTRUE / orxFALSE
##

proc orxConfig_HasSection*(zSectionName: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_HasSection", dynlib: libORX.}
## * Protects/unprotects a section from deletion (content might still be changed or deleted, but the section itself will resist delete/clear calls)
##  @param[in] _zSectionName     Section name to protect
##  @param[in] _bProtect         orxTRUE for protecting the section, orxFALSE to remove the protection
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_ProtectSection*(zSectionName: cstring; bProtect: orxBOOL): orxSTATUS {.
    cdecl, importc: "orxConfig_ProtectSection", dynlib: libORX.}
## * Gets section count
##  @return Section count
##

proc orxConfig_GetSectionCount*(): orxU32 {.cdecl,
    importc: "orxConfig_GetSectionCount", dynlib: libORX.}
## * Gets section at the given index
##  @param[in] _u32SectionIndex  Index of the desired section
##  @return orxSTRING if exist, orxSTRING_EMPTY otherwise
##

proc orxConfig_GetSection*(u32SectionIndex: orxU32): cstring {.cdecl,
    importc: "orxConfig_GetSection", dynlib: libORX.}
## * Clears all config info
##  @param[in] _pfnClearCallback Callback used to filter sections/keys to clear. If null, all sections/keys will be cleared
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_Clear*(pfnClearCallback: orxCONFIG_CLEAR_FUNCTION): orxSTATUS {.
    cdecl, importc: "orxConfig_Clear", dynlib: libORX.}
## * Clears section
##  @param[in] _zSectionName     Section name to clear
##
